  Deprecated VFSBrowser.getFilenameFilter(). (Marcelo Vanzin)

- added VFS._listDirectory(Object,String,VFSFileFilter,boolean,Component,boolean,boolean)
  (Marcelo Vanzin)

- moved MiscUtilities.globToRE() to StandardUtilities. (Marcelo Vanzin)

- added org.gjt.sp.util.PropertiesBean. See javadoc for details.
  (Marcelo Vanzin)

}}}

{{{ Bug Fixes

- SplashScreen is now in the middle of the screen, instead of between
  2 screens (ezust)

- PluginManager fixes: Automatically loads unloaded
    dependent plugins. (#1538702) (ezust)

- GuiUtilities.load/save geometry now saves x and y coordinates
  relative to the parent component. Changed core to make dialogs
  and floating dockables pop up in a place relative to the parent
  view.  (#1292706) (ezust)

- Memory dialog reports wrong values (#1538051) (Matthieu Casanova)

- Shortcut sorting was broken (#1538452) (Matthieu Casanova)

- Actions to-lower and to-upper now selects the word at caret if
  there is no selection (#1538720) (Matthieu Casanova)

- Quicklist of dockables windows is now sorted (#1538728)
  (Matthieu Casanova)

- Updated text in Search dialog to reflect reality (#1542029)
  (Nicholas O'Leary)

- SF Bug #1541009: 4.3pre6 regexp find: hangs + huge memory waste
  "$" matches right before the end of line; so we need to adjust the end
  of the matched region when that is used. To do this and still maintain
  the expected replace behavior, a new method was added to
  SearchMatcher, and users of that class should adjust the offsets of
  subsequent searches when an EOL is matched. (Marcelo Vanzin)
}}}

{{{ Miscellaneous

- VFS browser is not restricted to the built-in "glob" filter anymore.
  Plugins can register new filters to be used by the browser by
  implementing the "VFSFileFilter" interface and providing a service
  entry in service.xml, or by directly calling
  VFSBrowser.addVFSFileFilter(). (Marcelo Vanzin)

- PluginManager - ManagePanel enhancements - spacebar and escape